feat: implement anilist sync

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,6 +1,7 @@
 # App configuration
-app:
-  anilist_api_url: "https://graphql.anilist.co"
+anilist:
+  api_url: "https://graphql.anilist.co"
+  username: ""
 
 # Database configuration
 database:
