--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,6 @@ dependencies = [
     "python-json-logger>=4.0.0",
     "pytz>=2025.2",
     "requests>=2.32.5",
+    "ruff>=0.14.10",
     "sqlalchemy>=2.0.45",
 ]
